@@ -4,5 +4,6 @@ Revision history for perl distribution Devel-MojoProf
  - Started project
  - Add profiling for Mojo::UserAgent
  - Add profiling for Mojo::Pg
+ - Add profiling for Mojo::Redis
  - Add profiling for Mojo::SQLite
  - Add profiling for Mojo::mysql
